[package]
name = "mutual-gf"
version = "0.1.0"
authors = ["iliana destroyer of worlds <iliana@buttslol.net>"]
license = "MIT-0"
edition = "2018"
publish = false

[profile.release]
lto = true

[dependencies]
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
esbat = "0.1"
minlambda = "0.2"
minreq = { version = "2", features = ["https-native", "json-using-serde"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
